--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="tool-card" id="facebook-tool">
         <h2>FBdownder</h2>
         <p class="tool-subtitle">
-          Tempel link video / Reels Facebook (public). Masih beta, backend akan kita sambungkan belakangan.
+          Tempel link video / Reels Facebook (public). Masih beta, Klik Ambil Video, Download, Beres!
         </p>
 
         <form id="facebook-form">
