--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Toktokder & FBdownder - GTID Tools</title>
   <meta name="description" content="Download video TikTok & Facebook. Demo edukasi oleh GTID.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app">
@@ -78,6 +78,6 @@
     </footer>
   </div>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
